@@ -105,8 +105,8 @@ extensions = [%(extensions)s]
 # Add any paths that contain templates here, relative to this directory.
 templates_path = ['%(dot)stemplates']
 
-# The suffix of source filenames.
-source_suffix = '%(suffix)s'
+# The suffix(es) of source filenames.
+source_suffix = ['%(suffix)s']
 
 # The encoding of source files.
 #source_encoding = 'utf-8-sig'
